# UnleashedRecomp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg.json
UnleashedRecomp/: .gitignore  CMakeLists.txt  Config.h  Mutex.h  app.cpp  app.h  config.cpp  config.h  config_detail.h  decompressor.h  exports.cpp  exports.h  framework.h  game.cpp  game.h  main.cpp  misc_impl.cpp  sdl_listener.h  stdafx.cpp  stdafx.h  version.cmake
UnleashedRecomp/api/: README.md  SWA.h  SWA.inl
UnleashedRecomp/api/CSD/Manager/: csdmBase.h  csdmMotionPattern.h  csdmNode.h  csdmNode.inl  csdmNodeObserver.h  csdmObserverBase.h  csdmObserverBase.inl  csdmProject.h  csdmProject.inl  csdmRCObject.h  csdmRCObject.inl  csdmRCObjectImp.h  csdmRCObjectImp.inl  csdmRCPtr.h  csdmRCPtr.inl  csdmRCPtrAbs.h  csdmRCPtrAbs.inl  csdmResourceBase.h  csdmResourceBase.inl  csdmScene.h  csdmScene.inl  csdmSceneObserver.h  csdmSubjectBase.h  csdmSubjectBase.inl
UnleashedRecomp/api/CSD/Platform/: csdTexList.h  csdTexList.inl
UnleashedRecomp/api/Hedgehog/Base/: hhObject.h
UnleashedRecomp/api/Hedgehog/Math/: Matrix.h  Quaternion.h  Vector.h  Vector2.h
UnleashedRecomp/api/Hedgehog/Sparkle/: hhParticleMaterial.h
UnleashedRecomp/api/SWA/: Globals.h
UnleashedRecomp/api/SWA/Achievement/: AchievementID.h  AchievementManager.h  AchievementTest.h
UnleashedRecomp/api/SWA/CSD/: CsdDatabaseWrapper.h  CsdDatabaseWrapper.inl  CsdProject.h  CsdTexListMirage.h  GameObjectCSD.h
UnleashedRecomp/api/SWA/Camera/: Camera.h  CameraController.h
UnleashedRecomp/api/SWA/CharacterUtility/: CharacterProxy.h
UnleashedRecomp/apu/: audio.cpp  audio.h  embedded_player.cpp  embedded_player.h
UnleashedRecomp/apu/driver/: miniaudio_driver.cpp  miniaudio_driver.h  sdl2_driver.cpp  sdl2_driver.h  xaudio_driver.cpp
UnleashedRecomp/cfg/: config.cpp  config.h  config_detail.cpp  config_detail.h
UnleashedRecomp/cpu/: code_cache.cpp  code_cache.h  guest_code.h  guest_thread.cpp  guest_thread.h  ppc_context.h
UnleashedRecomp/gpu/: Window.cpp  Window.h  imgui_common.cpp  imgui_common.h  imgui_snapshot.cpp  imgui_snapshot.h  video.cpp  video.h
UnleashedRecomp/gpu/cache/: pipeline_state_cache.h  vertex_declaration_cache.h  vertex_element_cache.h
UnleashedRecomp/gpu/imgui/: imgui_common.h  imgui_font_builder.cpp  imgui_snapshot.cpp  imgui_snapshot.h
UnleashedRecomp/gpu/rhi/: plume_d3d12.cpp  plume_d3d12.h  plume_render_interface.h  plume_render_interface_types.h  plume_vulkan.cpp  plume_vulkan.h  rt64_d3d12.cpp  rt64_d3d12.h  rt64_render_interface.h  rt64_render_interface_builders.h  rt64_render_interface_types.h  rt64_vulkan.cpp  rt64_vulkan.h
UnleashedRecomp/gpu/shader/: csd_filter_ps.hlsl  csd_no_tex_vs.hlsl  csd_vs.hlsl  enhanced_motion_blur_ps.hlsl  gamma_correction_ps.hlsl  gaussian_blur.hlsli  imgui_common.hlsli  imgui_ps.hlsl  imgui_vs.hlsl  movie_common.hlsl  movie_common.hlsli  movie_ps.hlsl  movie_vs.hlsl  resolve_msaa_depth.hlsli
UnleashedRecomp/hid/: hid.cpp  hid.h  hid_detail.h
UnleashedRecomp/hid/driver/: sdl_hid.cpp
UnleashedRecomp/install/: directory_file_system.h  installer.cpp  installer.h  iso_file_system.cpp  iso_file_system.h  memory_mapped_file.cpp  update_checker.cpp  virtual_file_system.h  xcontent_file_system.cpp  xcontent_file_system.h  xex_patcher.cpp  xex_patcher.h
UnleashedRecomp/install/hashes/: game.cpp  update.cpp
UnleashedRecomp/kernel/: function.h  heap.cpp  heap.h  imports.cpp  memory.cpp  memory.h  platform.cpp  platform.h  xam.cpp  xam.h  xdbf.h  xdm.cpp  xdm.h
UnleashedRecomp/kernel/io/: file_system.cpp  file_system.h
UnleashedRecomp/locale/: config_locale.cpp  config_locale.h  locale.cpp  locale.h
UnleashedRecomp/mod/: mod_loader.cpp  mod_loader.h
UnleashedRecomp/os/: logger.cpp  logger.h  logger_detail.h  media.cpp  media_detail.h  process.cpp  process.h  process_detail.h  registry.h  user.cpp  user_detail.h  version.cpp  version.h  version_detail.h
UnleashedRecomp/os/linux/: logger_linux.cpp  media_linux.cpp  process_linux.cpp  user_linux.cpp  version_linux.cpp
UnleashedRecomp/os/macos/: media_macos.cpp  process_macos.cpp
UnleashedRecomp/os/win32/: logger_win32.cpp  media_win32.cpp  process_win32.cpp  registry_win32.inl  user_win32.cpp  version_win32.cpp
UnleashedRecomp/patches/: CGameModeStageTitle_patches.cpp  CHudPause_patches.cpp  CTitleStateIntro_patches.cpp  CTitleStateMenu_patches.cpp  aspect_ratio_patches.cpp  aspect_ratio_patches.h  audio_patches.cpp  camera_patches.cpp  fps_patches.cpp  frontend_listener.cpp  frontend_listener.h  input_patches.cpp  inspire_patches.cpp  inspire_patches.h  misc_patches.cpp  object_patches.cpp  player_patches.cpp  resident_patches.cpp  video_patches.cpp
UnleashedRecomp/patches/ui/: CHudPause_patches.cpp  CTitleStateIntro_patches.cpp  CTitleStateMenu_patches.cpp  frontend_listener.h
UnleashedRecomp/ppc/config/: SWA.toml
UnleashedRecomp/res/: .gitignore  config.toml  credits.h  icon.h  version.txt
UnleashedRecomp/res/macos/: MacOSXBundleInfo.plist.in  game_icon.icns
UnleashedRecomp/res/win32/: res.rc.template
UnleashedRecomp/ui/: achievement_menu.cpp  achievement_overlay.cpp  achievement_overlay.h  button_guide.cpp  button_guide.h  fader.cpp  fader.h  game_window.cpp  game_window.h  imgui_utils.cpp  imgui_utils.h  installer_wizard.cpp  installer_wizard.h  message_window.cpp  message_window.h  options_menu.cpp  options_menu.h  options_menu_thumbnails.cpp  options_menu_thumbnails.h  sdl_listener.h  window.cpp  window.h  window_events.h
UnleashedRecomp/user/: achievement_data.cpp  achievement_data.h  achievement_manager.cpp  achievement_manager.h  config.cpp  config.h  config_def.h  config_detail.cpp  config_detail.h  paths.cpp  paths.h  registry.cpp  registry.h
UnleashedRecompLib/: CMakeLists.txt
UnleashedRecompLib/config/: SWA.toml  SWA_switch_tables.toml
UnleashedRecompLib/shader/: shader_cache.h
tools/: CMakeLists.txt
tools/bc_diff/: CMakeLists.txt  bc_diff.cpp
tools/file_to_c/: CMakeLists.txt  file_to_c.cpp
tools/x_decompress/: CMakeLists.txt
(+173 files in other folders)
